2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>

	* src/ephy-navigation-action.c:
	(activate_back_or_forward_menu_item_cb). Forgot to
	remove the unused url variable.

2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>

	* embed/ephy-embed.c
	* embed/ephy-embed.h: (ephy_embed_shistory_copy).
	Add a method to copy the back/forward history from
	one embed to another.

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyBrowser.h:
	(EphyBrowser::CopySHistory) Implementation of 
	history copying.

	* embed/mozilla/mozilla-embed.cpp:
	Implement ephy_embed_shistory_copy by calling into
	EphyBrowser.

	* src/ephy-navigation-action.c:
	(activate_back_or_forward_menu_item_cb). If a
	history menu item is middle-clicked on, open a new
	tab, copy the history over and then go to the
	relevant page in the history.

	* src/ephy-toolbar.c: (ephy_toolbar_set_window) Attach
	handler for "open-link" to back/forward actions.

2005-10-12  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-single.c: (ephy_embed_single_iface_init),
	(ephy_embed_single_set_network_status),
	(ephy_embed_single_get_network_status):
	* embed/ephy-embed-single.h:
	* embed/mozilla/EphySingle.cpp:
	* embed/mozilla/EphySingle.h:
	* embed/mozilla/mozilla-embed-single.cpp:
	* src/ephy-window.c: (sync_tab_icon), (sync_network_status),
	(ephy_window_dispose), (ephy_window_init):
	* src/epiphany.defs:
	* src/window-commands.c: (window_cmd_file_work_offline):

	Remove the "network-status" signal from the embed single, and
	make it a property instead. Keep track of the network status in
	EphySingle, and emit property notification when it changes.

2005-10-12  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:
	* embed/mozilla/EphyAboutModule.h:
	A embed/mozilla/EphyRedirectChannel.cpp:
	A embed/mozilla/EphyRedirectChannel.h:
	* embed/mozilla/Makefile.am:

	Implement about:recover. Build the about module on all geckos, and