@@ -1,5 +1,11 @@
 2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>
 
+	* src/ephy-tab.c: (open_link_in_new_tab):
+	Copy the back history when a link is opened in
+	a new tab from a middle-click or a ctrl-click.
+
+2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>
+
 	* src/ephy-navigation-action.c:
 	(activate_back_or_forward_menu_item_cb). Forgot to
 	remove the unused url variable.
